--- a/projects/09/program/Main.vm
+++ b/projects/09/program/Main.vm
@@ -1,11 +1,20 @@
-function Main.main 1
+function Main.main 2
 call tictactoe.new 0
 pop local 0
 push local 0
 call tictactoe.drawBoard 1
 pop temp 0
+call Keyboard.keyPressed 0
+pop local 1
+push local 1
+push constant 140
+eq
+if-goto IF_TRUE0
+goto IF_FALSE0
+label IF_TRUE0
 push local 0
 call tictactoe.dispose 1
 pop temp 0
+label IF_FALSE0
 push constant 0
 return
