--- a/projects/09/program/tictactoe.vm
+++ b/projects/09/program/tictactoe.vm
@@ -31,16 +31,11 @@ push constant 60
 call Board.new 2
 pop static 0
 push constant 1
-call Piece.new 1
+call Pieces.new 1
 pop static 1
 push constant 2
-call Piece.new 1
+call Pieces.new 1
 pop static 2
-push static 0
-push static 1
-push static 2
-call AI.new 3
-pop static 3
 push constant 0
 return
 function TicTacToe.start 4
@@ -49,87 +44,29 @@ push constant 0
 not
 not
 if-goto WHILE_END0
-push constant 67
+call Screen.clearScreen 0
+pop temp 0
+call TicTacToe.init 0
+pop temp 0
+push constant 38
 call String.new 1
-push constant 39
+push constant 80
 call String.appendChar 2
-push constant 49
+push constant 114
 call String.appendChar 2
-push constant 39
+push constant 101
 call String.appendChar 2
-push constant 32
+push constant 115
 call String.appendChar 2
-push constant 84
-call String.appendChar 2
-push constant 79
+push constant 115
 call String.appendChar 2
 push constant 32
 call String.appendChar 2
-push constant 76
+push constant 102
 call String.appendChar 2
-push constant 69
+push constant 111
 call String.appendChar 2
-push constant 84
-call String.appendChar 2
-push constant 32
-call String.appendChar 2
-push constant 83
-call String.appendChar 2
-push constant 89
-call String.appendChar 2
-push constant 83
-call String.appendChar 2
-push constant 84
-call String.appendChar 2
-push constant 69
-call String.appendChar 2
-push constant 77
-call String.appendChar 2
-push constant 32
-call String.appendChar 2
-push constant 77
-call String.appendChar 2
-push constant 65
-call String.appendChar 2
-push constant 75
-call String.appendChar 2
-push constant 69
-call String.appendChar 2
-push constant 32
-call String.appendChar 2
-push constant 84
-call String.appendChar 2
-push constant 72
-call String.appendChar 2
-push constant 69
-call String.appendChar 2
-push constant 32
-call String.appendChar 2
-push constant 70
-call String.appendChar 2
-push constant 73
-call String.appendChar 2
-push constant 82
-call String.appendChar 2
-push constant 83
-call String.appendChar 2
-push constant 84
-call String.appendChar 2
-push constant 32
-call String.appendChar 2
-push constant 77
-call String.appendChar 2
-push constant 79
-call String.appendChar 2
-push constant 86
-call String.appendChar 2
-push constant 69
-call String.appendChar 2
-push constant 32
-call String.appendChar 2
-push constant 124
-call String.appendChar 2
-push constant 124
+push constant 114
 call String.appendChar 2
 push constant 32
 call String.appendChar 2
@@ -141,51 +78,55 @@ push constant 39
 call String.appendChar 2
 push constant 32
 call String.appendChar 2
-push constant 84
+push constant 80
 call String.appendChar 2
-push constant 79
+push constant 108
 call String.appendChar 2
-push constant 32
+push constant 97
 call String.appendChar 2
-push constant 77
+push constant 121
 call String.appendChar 2
-push constant 65
+push constant 101
 call String.appendChar 2
-push constant 75
-call String.appendChar 2
-push constant 69
+push constant 114
 call String.appendChar 2
 push constant 32
 call String.appendChar 2
-push constant 84
-call String.appendChar 2
-push constant 72
-call String.appendChar 2
-push constant 69
+push constant 49
 call String.appendChar 2
 push constant 32
 call String.appendChar 2
-push constant 70
+push constant 124
 call String.appendChar 2
-push constant 73
-call String.appendChar 2
-push constant 82
-call String.appendChar 2
-push constant 83
-call String.appendChar 2
-push constant 84
+push constant 124
 call String.appendChar 2
 push constant 32
 call String.appendChar 2
-push constant 83
+push constant 39
 call String.appendChar 2
-push constant 84
+push constant 49
 call String.appendChar 2
-push constant 69
+push constant 39
+call String.appendChar 2
+push constant 32
 call String.appendChar 2
 push constant 80
 call String.appendChar 2
-call InputUtil.waitForZeroOrOne 1
+push constant 108
+call String.appendChar 2
+push constant 97
+call String.appendChar 2
+push constant 121
+call String.appendChar 2
+push constant 101
+call String.appendChar 2
+push constant 114
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 50
+call String.appendChar 2
+call Input.waitForZeroOrOne 1
 pop local 0
 push static 1
 pop local 1
@@ -333,53 +274,35 @@ eq
 if-goto IF_TRUE4
 goto IF_FALSE4
 label IF_TRUE4
-push constant 51
+push constant 42
 call String.new 1
-push constant 67
+push constant 80
 call String.appendChar 2
-push constant 79
+push constant 108
 call String.appendChar 2
-push constant 78
+push constant 97
 call String.appendChar 2
-push constant 71
+push constant 121
 call String.appendChar 2
-push constant 82
+push constant 101
 call String.appendChar 2
-push constant 65
-call String.appendChar 2
-push constant 76
-call String.appendChar 2
-push constant 85
-call String.appendChar 2
-push constant 84
-call String.appendChar 2
-push constant 73
-call String.appendChar 2
-push constant 79
-call String.appendChar 2
-push constant 78
-call String.appendChar 2
-push constant 83
-call String.appendChar 2
-push constant 33
+push constant 114
 call String.appendChar 2
 push constant 32
 call String.appendChar 2
-push constant 89
-call String.appendChar 2
-push constant 79
-call String.appendChar 2
-push constant 85
+push constant 49
 call String.appendChar 2
 push constant 32
 call String.appendChar 2
 push constant 87
 call String.appendChar 2
-push constant 79
+push constant 105
 call String.appendChar 2
-push constant 78
+push constant 110
 call String.appendChar 2
-push constant 33
+push constant 115
+call String.appendChar 2
+push constant 46
 call String.appendChar 2
 push constant 32
 call String.appendChar 2
@@ -441,23 +364,35 @@ call Input.showMessage 1
 pop temp 0
 goto IF_END4
 label IF_FALSE4
-push constant 36
+push constant 42
 call String.new 1
-push constant 89
+push constant 80
 call String.appendChar 2
-push constant 79
+push constant 108
 call String.appendChar 2
-push constant 85
+push constant 97
+call String.appendChar 2
+push constant 121
+call String.appendChar 2
+push constant 101
+call String.appendChar 2
+push constant 114
 call String.appendChar 2
 push constant 32
 call String.appendChar 2
-push constant 76
+push constant 50
 call String.appendChar 2
-push constant 79
+push constant 32
 call String.appendChar 2
-push constant 83
+push constant 87
 call String.appendChar 2
-push constant 84
+push constant 105
+call String.appendChar 2
+push constant 110
+call String.appendChar 2
+push constant 115
+call String.appendChar 2
+push constant 46
 call String.appendChar 2
 push constant 32
 call String.appendChar 2
@@ -531,7 +466,7 @@ goto WHILE_EXP0
 label WHILE_END0
 push constant 0
 return
-function TicTacToe.play 4
+function TicTacToe.play 6
 push constant 0
 pop local 0
 push argument 0
@@ -545,8 +480,46 @@ push local 0
 not
 not
 if-goto WHILE_END0
-push constant 43
+push constant 62
 call String.new 1
+push constant 80
+call String.appendChar 2
+push constant 108
+call String.appendChar 2
+push constant 97
+call String.appendChar 2
+push constant 121
+call String.appendChar 2
+push constant 101
+call String.appendChar 2
+push constant 114
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 49
+call String.appendChar 2
+push constant 39
+call String.appendChar 2
+push constant 115
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 84
+call String.appendChar 2
+push constant 117
+call String.appendChar 2
+push constant 114
+call String.appendChar 2
+push constant 110
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 124
+call String.appendChar 2
+push constant 124
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
 push constant 69
 call String.appendChar 2
 push constant 78
@@ -646,15 +619,15 @@ return
 label IF_FALSE1
 push local 1
 call TicTacToe.inputToMove 1
-pop local 2
+pop local 4
 push static 0
 push constant 0
-push local 2
+push local 4
 add
 pop pointer 1
 push that 0
 push constant 1
-push local 2
+push local 4
 add
 pop pointer 1
 push that 0
@@ -664,12 +637,12 @@ goto WHILE_EXP0
 label WHILE_END0
 push static 0
 push constant 0
-push local 2
+push local 4
 add
 pop pointer 1
 push that 0
 push constant 1
-push local 2
+push local 4
 add
 pop pointer 1
 push that 0
@@ -678,25 +651,216 @@ call Board.makeMove 4
 pop temp 0
 push static 0
 push constant 0
-push local 2
+push local 4
 add
 pop pointer 1
 push that 0
 push constant 1
-push local 2
+push local 4
 add
 pop pointer 1
 push that 0
 push argument 1
 call Board.drawMove 4
 pop temp 0
-push local 2
+push local 4
 call Array.dispose 1
 pop temp 0
 call TicTacToe.processBoard 0
 return
 goto IF_END0
 label IF_FALSE0
+label WHILE_EXP1
+push local 0
+not
+not
+if-goto WHILE_END1
+push constant 62
+call String.new 1
+push constant 80
+call String.appendChar 2
+push constant 108
+call String.appendChar 2
+push constant 97
+call String.appendChar 2
+push constant 121
+call String.appendChar 2
+push constant 101
+call String.appendChar 2
+push constant 114
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 50
+call String.appendChar 2
+push constant 39
+call String.appendChar 2
+push constant 115
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 84
+call String.appendChar 2
+push constant 117
+call String.appendChar 2
+push constant 114
+call String.appendChar 2
+push constant 110
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 124
+call String.appendChar 2
+push constant 124
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 69
+call String.appendChar 2
+push constant 78
+call String.appendChar 2
+push constant 84
+call String.appendChar 2
+push constant 69
+call String.appendChar 2
+push constant 82
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 80
+call String.appendChar 2
+push constant 79
+call String.appendChar 2
+push constant 83
+call String.appendChar 2
+push constant 73
+call String.appendChar 2
+push constant 84
+call String.appendChar 2
+push constant 73
+call String.appendChar 2
+push constant 79
+call String.appendChar 2
+push constant 78
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 40
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 49
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 45
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 57
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 41
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 124
+call String.appendChar 2
+push constant 124
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 39
+call String.appendChar 2
+push constant 48
+call String.appendChar 2
+push constant 39
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 116
+call String.appendChar 2
+push constant 111
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 82
+call String.appendChar 2
+push constant 69
+call String.appendChar 2
+push constant 83
+call String.appendChar 2
+push constant 84
+call String.appendChar 2
+push constant 65
+call String.appendChar 2
+push constant 82
+call String.appendChar 2
+push constant 84
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+call Input.readInput 1
+pop local 1
+push local 1
+push constant 0
+eq
+if-goto IF_TRUE2
+goto IF_FALSE2
+label IF_TRUE2
+push constant 0
+return
+label IF_FALSE2
+push local 1
+call TicTacToe.inputToMove 1
+pop local 5
+push static 0
+push constant 0
+push local 5
+add
+pop pointer 1
+push that 0
+push constant 1
+push local 5
+add
+pop pointer 1
+push that 0
+call Board.isFree 3
+pop local 0
+goto WHILE_EXP1
+label WHILE_END1
+push static 0
+push constant 0
+push local 5
+add
+pop pointer 1
+push that 0
+push constant 1
+push local 5
+add
+pop pointer 1
+push that 0
+push argument 1
+call Board.makeMove 4
+pop temp 0
+push static 0
+push constant 0
+push local 5
+add
+pop pointer 1
+push that 0
+push constant 1
+push local 5
+add
+pop pointer 1
+push that 0
+push argument 1
+call Board.drawMove 4
+pop temp 0
+push local 5
+call Array.dispose 1
+pop temp 0
 call TicTacToe.processBoard 0
 return
 label IF_END0
