--- a/projects/09/program/Input.vm
+++ b/projects/09/program/Input.vm
@@ -10,8 +10,36 @@ push static 0
 push static 1
 call Output.moveCursor 2
 pop temp 0
-push constant 49
+push constant 63
 call String.new 1
+push constant 32
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
 push constant 32
 call String.appendChar 2
 push constant 32
@@ -158,6 +186,10 @@ push local 0
 push constant 58
 lt
 and
+push local 0
+push constant 128
+eq
+or
 if-goto IF_TRUE0
 goto IF_FALSE0
 label IF_TRUE0
@@ -173,7 +205,7 @@ goto WHILE_EXP0
 label WHILE_END0
 push constant 0
 return
-function Input.waitForZeroOrOne 2
+function Input.playerInput 2
 call Input.eraseMessage 0
 pop temp 0
 label WHILE_EXP0
